# Univer_sem6

algos_kr/: CMakeLists.txt  task_3.cpp  task_4.cpp
ogkg/: CMakeLists.txt  compute.cpp  compute.h  solution.cpp
os/: Makefile
os/DiningPhilosophers/: ph  solution.c
os/Lab3/keyboard_intercept/: Makefile  keyboard_event_file.c  keyboard_event_file.h  keyboard_intercept.c  keylogger.c
os/Lab4/: 22.c  23.c
os/ThreadsCommunication/: exe  solution.c
parallels/: .gitignore  Makefile  README  lab_1.c  lab_2.c  lab_3.c  measure.sh  test.c
